# arduino-steering-wheel

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Tauri.toml  arduino-steering-wheel.ino
sketch/: sketch.ino
sketch/_old/: config.h  feedback_handler.h  pedals_handler.h  transmission_handler.h  wheel.ino  wheel_handler.h
src/: config.h  demonstration.h  demonstrative_start.h  error.rs  lib.rs  main.rs  pedals_handler.h  prelude.rs  src.ino  steering_wheel_feedback_handler.h  steering_wheel_handler.h  transmission_handbrake_handler.h  wheel_feedback_handler.h  wheel_handler.h
src/app/: app.rs  app_builder.rs  config.rs  config_parts.rs  logger.rs  menu_builder.rs  mod.rs  tray.rs  tray_builder.rs
src/wheel/: _wheel.rs  feedback.rs  mod.rs  state.rs  wheel.rs
ui/: Cargo.toml  index.html
ui/icons/: icon.icns
ui/js/: tauri.js
ui/scss/: base.scss  main.scss
ui/scss/base/: base.scss  form.scss  scroll.scss
ui/scss/modules/: form.scss
ui/src/: config.rs  counter.rs  lib.rs  main.rs  prelude.rs
ui/src/api/: form.rs  mod.rs  node.rs  tauri.rs
ui/src/form/: check.rs  field.rs  form.rs  list.rs  mod.rs  number.rs  range.rs  select.rs  switch.rs  text.rs
wheel/: config.h  demonstration.h  feedback_handler.h  pedals_handler.h  transmission_handler.h  wheel.ino  wheel_handler.h
