[package]
name = "ui"
edition = "2024"

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
macron = { version = "0.1.9", features = ["derive", "path", "string", "collections"] }
yew = { version = "0.21.0", features = ["csr"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
serde = "1.0.219"
serde_json = "1.0.140"
js-sys = "0.3.77"
